--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Legatio Finance - Investissement Immobilier Tokenisé</title>
-    <meta name="description" content="Investissez dans l’immobilier tokenisé dès 100$ avec Legatio Finance. Découvrez des rendements passifs jusqu’à 7% en 2025 grâce à la blockchain et aux NFTs.">
-    <meta name="keywords" content="immobilier tokenisé, NFTs immobiliers, staking crypto, prêts crypto, blockchain, Legatio Finance">
+    <title>Legatio Finance - Immobilier Tokenisé & RWA dès 100$</title>
+    <meta name="description" content="Investissez dans l’immobilier tokenisé et les RWA dès 100$ avec Legatio Finance. Rendements passifs via NFTs et staking en 2025.">
+    <meta name="keywords" content="immobilier tokenisé, RWA, NFTs immobiliers, staking LEG, prêts crypto, blockchain, Legatio Finance, finance décentralisée">
     <meta name="author" content="Legatio Finance Team">
     <!-- Open Graph -->
     <meta property="og:title" content="Legatio Finance - Immobilier Tokenisé dès 100$">
@@ -22,6 +22,52 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <style>
+        .header-content .catchphrase {
+            font-size: 1.5em;
+            font-weight: 700;
+            color: #2c3e50;
+            margin: 10px 0;
+            text-transform: uppercase;
+        }
+        .simulator-cta {
+            font-size: 1.2em;
+            padding: 15px 30px;
+            background-color: #D4A017;
+            border: 2px solid #D4A017;
+        }
+        .simulator-cta:hover {
+            background-color: #B8860B;
+            border-color: #B8860B;
+        }
+        .token-benefits-list, .testimonials-container, .roadmap-timeline {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+        .token-benefit, .testimonial, .roadmap-item {
+            flex: 1;
+            min-width: 300px;
+            background: #f9f9f9;
+            padding: 20px;
+            border-radius: 8px;
+            text-align: center;
+        }
+        .token-benefit i {
+            font-size: 2em;
+            color: #2c3e50;
+            margin-bottom: 10px;
+        }
+        .author {
+            font-style: italic;
+            color: #555;
+            margin-top: 10px;
+        }
+        .roadmap-item {
+            border-left: 4px solid #2c3e50;
+            border-radius: 0 8px 8px 0;
+            text-align: left;
+        }
         .crypto-prices { text-align: center; padding: 20px; background: #f9f9f9; border-radius: 8px; margin: 20px 0; }
         .crypto-prices h2 { font-size: 1.8em; margin-bottom: 15px; }
         .crypto-prices p { font-size: 1.2em; margin: 10px 0; }
@@ -49,6 +95,8 @@
         .team-member p { margin: 5px 0; color: #555; }
         #loading-spinner { margin-left: 5px; }
         #network-status, #error-message { margin-top: 5px; }
+        .swap-form { max-width: 400px; margin: 0 auto; padding: 20px; background: #f9f9f9; border-radius: 8px; }
+        .swap-form input { margin-bottom: 10px; }
     </style>
 </head>
 <body>
@@ -67,7 +115,7 @@
     <header class="header">
         <div class="header-content">
             <h1>Legatio Finance</h1>
-            <p>Investissez dans l’immobilier tokenisé dès 100$ avec des rendements passifs en 2025.</p>
+            <p class="catchphrase">Finance décentralisée pour les actifs réels</p>
             <a href="#start" class="cta-button" aria-label="Découvrir les offres">Découvrir Maintenant</a>
         </div>
     </header>
@@ -76,7 +124,29 @@
         <section id="start" class="section start-section">
             <h2>Bienvenue chez Legatio Finance</h2>
             <p>Découvrez une plateforme innovante pour investir dans l’immobilier tokenisé avec sécurité et simplicité grâce à la blockchain.</p>
+            <a href="#simulateur-rwa" class="cta-button simulator-cta" aria-label="Essayer le simulateur">Essayer le Simulateur</a>
         </section>
+
+        <div class="section token-benefits">
+            <h2>Pourquoi $LEG ?</h2>
+            <div class="token-benefits-list">
+                <div class="token-benefit">
+                    <i class="fas fa-percentage"></i>
+                    <h3>Staking</h3>
+                    <p>Générez des rendements passifs jusqu’à 7% par an.</p>
+                </div>
+                <div class="token-benefit">
+                    <i class="fas fa-users"></i>
+                    <h3>Gouvernance</h3>
+                    <p>Participez à la gestion décentralisée de Legatio.</p>
+                </div>
+                <div class="token-benefit">
+                    <i class="fas fa-hand-holding-usd"></i>
+                    <h3>Prêts</h3>
+                    <p>Accédez à des prêts sécurisés avec vos actifs.</p>
+                </div>
+            </div>
+        </div>
 
         <div class="section before-after">
             <h2>Avant et Après</h2>
@@ -191,6 +261,47 @@
             </div>
         </div>
 
+        <div class="section swap">
+            <h2>Acheter du $LEG</h2>
+            <div class="swap-form">
+                <input type="number" id="swap-amount" placeholder="Montant en ETH">
+                <button onclick="swapLEG()" class="cta-button">Échanger</button>
+                <p id="swap-result"></p>
+            </div>
+        </div>
+
+        <div class="section testimonials">
+            <h2>Ce que Nos Utilisateurs Disent</h2>
+            <div class="testimonials-container">
+                <div class="testimonial">
+                    <p>"Legatio m’a permis d’investir dans l’immobilier avec seulement 100$. Une révolution !"</p>
+                    <p class="author">- Jean, Investisseur</p>
+                </div>
+                <div class="testimonial">
+                    <p>"Les rendements de staking sont impressionnants, et la plateforme est facile à utiliser."</p>
+                    <p class="author">- Marie, Débutante</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="section roadmap">
+            <h2>Roadmap 2025</h2>
+            <div class="roadmap-timeline">
+                <div class="roadmap-item">
+                    <h3>Q1 2025</h3>
+                    <p>Lancement de la plateforme et premier NFT immobilier.</p>
+                </div>
+                <div class="roadmap-item">
+                    <h3>Q2 2025</h3>
+                    <p>Intégration des prêts RWA et staking $LEG.</p>
+                </div>
+                <div class="roadmap-item">
+                    <h3>Q3 2025</h3>
+                    <p>Lancement de la collection "Legatio Genesis" et expansion internationale.</p>
+                </div>
+            </div>
+        </div>
+
         <div id="team" class="section team">
             <h2>Notre Équipe</h2>
             <div class="team-container">
@@ -274,6 +385,12 @@
         <div class="section learn">
             <h2>Apprenez l’Immobilier Tokenisé</h2>
             <p>Découvrez nos guides pour débutants : <a href="#faq">Qu’est-ce qu’un NFT immobilier ?</a> | <a href="#how-to-invest">Comment investir avec Legatio ?</a></p>
+        </div>
+
+        <div class="section news">
+            <h2>Actualités & Éducation</h2>
+            <p>Découvrez nos guides : <a href="#blog">Qu’est-ce que la tokenisation immobilière ?</a></p>
+            <p><a href="blog.html" class="cta-button">Lire le Blog</a></p>
         </div>
 
         <div id="investors" class="section investors">
@@ -385,16 +502,21 @@
                 livePrices['bitcoin'] = data['bitcoin']?.usd || 0;
                 livePrices['pax-gold'] = data['pax-gold']?.usd || 0;
                 livePrices['slv-token'] = data['slv-token']?.usd || 0;
-                document.getElementById('btcPrice').textContent = `Bitcoin: $${livePrices['bitcoin'].toLocaleString('fr-FR', { maximumFractionDigits: 2 })}`;
-                document.getElementById('goldPrice').textContent = `Or: $${livePrices['pax-gold'].toLocaleString('fr-FR', { maximumFractionDigits: 2 })} / oz`;
-                document.getElementById('silverPrice').textContent = `Argent: $${livePrices['slv-token'].toLocaleString('fr-FR', { maximumFractionDigits: 2 })} / oz`;
-                updateCollateralPrice();
+                updatePriceDisplay();
             } catch (error) {
                 console.error('Erreur lors de la récupération des prix:', error);
                 document.getElementById('btcPrice').textContent = 'Bitcoin: Prix indisponible';
                 document.getElementById('goldPrice').textContent = 'Or: Prix indisponible';
                 document.getElementById('silverPrice').textContent = 'Argent: Prix indisponible';
             }
+        }
+
+        function updatePriceDisplay() {
+            document.getElementById('btcPrice').textContent = `Bitcoin: $${livePrices['bitcoin'].toLocaleString('fr-FR', { maximumFractionDigits: 2 })}`;
+            document.getElementById('goldPrice').textContent = `Or: $${livePrices['pax-gold'].toLocaleString('fr-FR', { maximumFractionDigits: 2 })} / oz`;
+            document.getElementById('silverPrice').textContent = `Argent: $${livePrices['slv-token'].toLocaleString('fr-FR', { maximumFractionDigits: 2 })} / oz`;
+            gsap.from(".crypto-prices p", { opacity: 0, duration: 0.5, stagger: 0.1 });
+            updateCollateralPrice();
         }
 
         function updateCollateralPrice() {
@@ -444,7 +566,7 @@
             networkStatus.classList.add('hidden');
             errorMessage.classList.add('hidden');
 
-            // Vérification approfondie de MetaMask
+            // Vérification de MetaMask
             if (!window.ethereum) {
                 console.error("MetaMask non détecté : window.ethereum est undefined");
                 errorMessage.classList.remove('hidden');
@@ -463,22 +585,23 @@
                 loadingSpinner.classList.remove('hidden');
                 connectButton.disabled = true;
 
-                // Vérifier si MetaMask est verrouillé
+                // Ajouter un délai pour s'assurer que MetaMask est prêt
+                console.log("Préparation de la connexion à MetaMask...");
+                await new Promise(resolve => setTimeout(resolve, 100));
+
+                // Vérifier les comptes existants avant de faire une nouvelle demande
                 console.log("Vérification des comptes existants...");
-                const accounts = await window.ethereum.request({ method: 'eth_accounts' });
+                let accounts = await window.ethereum.request({ method: 'eth_accounts' });
                 console.log("Comptes détectés via eth_accounts :", accounts);
 
                 if (accounts.length === 0) {
-                    console.log("Aucun compte actif détecté. Demande de connexion...");
-                    errorMessage.classList.remove('hidden');
-                    errorMessage.textContent = "MetaMask est verrouillé ou aucun compte n’est connecté. Veuillez déverrouiller MetaMask et autoriser la connexion.";
-                    // Demander la connexion
-                    const newAccounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-                    console.log("Nouveaux comptes après eth_requestAccounts :", newAccounts);
-                    if (newAccounts.length === 0) {
-                        throw new Error("Aucun compte n’a été autorisé. Veuillez accepter la connexion dans MetaMask.");
-                    }
-                    accounts.push(...newAccounts);
+                    console.log("Aucun compte détecté. Demande de connexion via eth_requestAccounts...");
+                    accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+                    console.log("Comptes retournés par eth_requestAccounts :", accounts);
+                }
+
+                if (accounts.length === 0) {
+                    throw new Error("Aucun portefeuille actif trouvé ou autorisation refusée.");
                 }
 
                 const account = accounts[0];
@@ -503,15 +626,27 @@
                     errorMessage.textContent = 'Connexion refusée : Vous avez annulé la demande de connexion.';
                 } else if (error.code === -32002) {
                     errorMessage.textContent = 'Une demande de connexion est déjà en cours. Vérifiez MetaMask et acceptez la demande.';
-                } else if (error.message.includes("No active wallet found")) {
-                    errorMessage.textContent = 'Aucun portefeuille actif trouvé. Veuillez déverrouiller MetaMask ou importer un portefeuille.';
+                    // Tentative de reconnexion après 1 seconde
+                    setTimeout(() => connectMetaMask(), 1000);
+                } else if (error.message.includes("Aucun portefeuille actif trouvé") || error.message.includes("User denied account authorization")) {
+                    errorMessage.textContent = 'Aucun portefeuille actif trouvé. Veuillez déverrouiller MetaMask, accepter la demande de connexion dans le pop-up, ou importer un portefeuille.';
                 } else {
-                    errorMessage.textContent = `Erreur : ${error.message || 'Problème inconnu lors de la connexion à MetaMask.'}`;
+                    errorMessage.textContent = `Erreur : ${error.message || 'Problème inconnu lors de la connexion à MetaMask.'} Consultez la console pour plus de détails.`;
                 }
             } finally {
                 loadingSpinner.classList.add('hidden');
                 connectButton.disabled = false;
             }
+        }
+
+        async function swapLEG() {
+            if (document.getElementById('connect-metamask').textContent !== 'MetaMask Connecté') {
+                alert('Connectez d’abord votre wallet !');
+                return;
+            }
+            const amount = document.getElementById('swap-amount').value;
+            document.getElementById('swap-result').textContent = `Échange de ${amount} ETH en cours... (API à implémenter)`;
+            // À implémenter : appel à une API comme 0x ou Uniswap
         }
 
         function requestLoan() {
@@ -525,12 +660,12 @@
 
         document.addEventListener("DOMContentLoaded", () => {
             fetchLivePrices();
-            setInterval(fetchLivePrices, 60000);
+            setInterval(() => { fetchLivePrices(); updatePriceDisplay(); }, 60000);
             document.getElementById('collateral-type').addEventListener('change', updateCollateralPrice);
             updateCollateralPrice();
             document.getElementById('connect-metamask').addEventListener('click', connectMetaMask);
 
-            gsap.from(".section", { opacity: 0, y: 50, duration: 1, stagger: 0.3, scrollTrigger: { trigger: ".section", start: "top 90%" } });
+            gsap.from(".section", { opacity: 0, y: 50, duration: 1, stagger: 0.3, scrollTrigger: { trigger: ".section", start: "top 90%", toggleActions: "play none none reverse" } });
             const buttons = document.querySelectorAll('.cta-button');
             buttons.forEach(button => {
                 button.addEventListener('click', () => {
