--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
 
         <div class="section news">
             <h2>Actualités & Éducation</h2>
-            <p>Découvrez nos guides : <a href="#blog">Qu’est-ce que la tokenisation immobilière ?</a></p>
-            <p><a href="blog.html" class="cta-button">Lire le Blog</a></p>
+            <p>Découvrez notre formation : <a href="#blog">Comment stocker et sécuriser ses cryptomonnaies ?</a></p>
+            <p><a href="blog.html" class="cta-button">Notre Formation</a></p>
         </div>
 
         <div id="investors" class="section investors">
