--- a/index.html
+++ b/index.html
@@ -410,8 +410,8 @@
 
         <div class="section news">
             <h2>Actualités & Éducation</h2>
-            <p>Découvrez nos guides : <a href="https://forms.zoho.eu/legatiofinancegm1/form/FormationLegatio" target="_blank">Qu’est-ce que la tokenisation immobilière ?</a></p>
-            <p><a href="https://forms.zoho.eu/legatiofinancegm1/form/FormationLegatio" class="cta-button" target="_blank">S’inscrire à la Formation</a></p>
+            <p>Découvrez nos guides : <a href="https://forms.zoho.eu/legatiofinancegm1/form/FormationLegatio" target="_blank">Comment stocker et sécuriser ses cryptomonnaies ?</a></p>
+            <p><a href="https://forms.zoho.eu/legatiofinancegm1/form/FormationLegatio" class="cta-button" target="_blank">Acheter Notre Formation</a></p>
         </div>
 
         <div id="investors" class="section investors">
