--- a/index.html
+++ b/index.html
@@ -639,211 +639,47 @@
             }
         }
 
-       async function connectMetaMask() {
+   async function connectMetaMask() {
     const connectButton = document.getElementById('connect-metamask');
     const loadingSpinner = document.getElementById('loading-spinner');
-    const walletAddress = document.getElementById('wallet-address');
-    const networkStatus = document.getElementById('network-status');
     const errorMessage = document.getElementById('error-message');
 
-    walletAddress.classList.add('hidden');
-    networkStatus.classList.add('hidden');
     errorMessage.classList.add('hidden');
+    console.log("Tentative de connexion à MetaMask...");
 
-    console.log("Démarrage de connectMetaMask()");
     if (!window.ethereum) {
-        console.error("MetaMask non détecté : window.ethereum est undefined");
+        console.error("MetaMask non détecté");
+        errorMessage.textContent = "MetaMask n’est pas détecté.";
         errorMessage.classList.remove('hidden');
-        errorMessage.textContent = "MetaMask n’est pas détecté. Veuillez vérifier que l’extension est installée et activée.";
-        return;
-    }
-
-    if (!window.ethereum.isMetaMask) {
-        console.error("L'objet window.ethereum n'est pas MetaMask");
-        errorMessage.classList.remove('hidden');
-        errorMessage.textContent = "L’extension détectée n’est pas MetaMask. Veuillez utiliser MetaMask.";
         return;
     }
 
     try {
-        console.log("MetaMask détecté, lancement de la connexion...");
         loadingSpinner.classList.remove('hidden');
         connectButton.disabled = true;
-
-        console.log("Attente avant connexion...");
-        await new Promise(resolve => setTimeout(resolve, 100));
-
-        console.log("Vérification des comptes existants...");
-        let accounts = await window.ethereum.request({ method: 'eth_accounts' });
-        console.log("Comptes détectés via eth_accounts :", accounts);
-
-        if (accounts.length === 0) {
-            console.log("Aucun compte détecté, demande de connexion via eth_requestAccounts...");
-            accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
-            console.log("Comptes retournés par eth_requestAccounts :", accounts);
-        }
-
-        if (accounts.length === 0) {
-            throw new Error("Aucun portefeuille actif trouvé ou autorisation refusée.");
-        }
-
-        const account = accounts[0];
-        walletAddress.classList.remove('hidden');
-        walletAddress.textContent = `Adresse connectée : ${account.slice(0, 6)}...${account.slice(-4)}`;
-
-        const chainId = await window.ethereum.request({ method: 'eth_chainId' });
-        console.log("Chain ID détecté :", chainId);
-        if (chainId !== '0xa4b1') {
-            networkStatus.classList.remove('hidden');
-            networkStatus.textContent = 'Veuillez passer au réseau Arbitrum pour continuer.';
-            walletAddress.classList.add('hidden');
-        } else {
-            networkStatus.classList.add('hidden');
+        console.log("Demande de connexion à MetaMask...");
+        const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
+        console.log("Comptes récupérés :", accounts);
+        if (accounts.length > 0) {
+            const account = accounts[0];
+            document.getElementById('wallet-address').textContent = `Adresse connectée : ${account.slice(0, 6)}...${account.slice(-4)}`;
+            document.getElementById('wallet-address').classList.remove('hidden');
             connectButton.textContent = 'MetaMask Connecté';
+        } else {
+            throw new Error("Aucun compte retourné par MetaMask.");
         }
     } catch (error) {
-        console.error('Erreur détaillée lors de la connexion à MetaMask:', error);
+        console.error("Erreur détaillée :", error);
+        errorMessage.textContent = `Erreur : ${error.message || 'Problème inconnu lors de la connexion.'}`;
         errorMessage.classList.remove('hidden');
         if (error.code === 4001) {
-            errorMessage.textContent = 'Connexion refusée : Vous avez annulé la demande de connexion.';
+            errorMessage.textContent = 'Connexion refusée : Vous avez peut-être annulé dans MetaMask.';
         } else if (error.code === -32002) {
-            errorMessage.textContent = 'Une demande de connexion est déjà en cours. Vérifiez MetaMask et acceptez la demande.';
-            setTimeout(() => connectMetaMask(), 1000); // Tentative de reconnexion
-        } else if (error.message.includes("Aucun portefeuille actif trouvé") || error.message.includes("User denied account authorization")) {
-            errorMessage.textContent = 'Aucun portefeuille actif trouvé. Veuillez déverrouiller MetaMask, accepter la demande de connexion dans le pop-up, ou importer un portefeuille.';
-        } else {
-            errorMessage.textContent = `Erreur : ${error.message || 'Problème inconnu lors de la connexion à MetaMask.'}`;
+            errorMessage.textContent = 'Demande en cours. Vérifiez MetaMask ou réessayez.';
+            setTimeout(() => connectMetaMask(), 2000);
         }
     } finally {
         loadingSpinner.classList.add('hidden');
         connectButton.disabled = false;
     }
 }
-
-        async function swapLEG() {
-            if (document.getElementById('connect-metamask').textContent !== 'MetaMask Connecté') {
-                alert('Connectez d’abord votre wallet !');
-                return;
-            }
-            const amount = document.getElementById('swap-amount').value;
-            document.getElementById('swap-result').textContent = `Échange de ${amount} ETH en cours... (API à implémenter)`;
-            // À implémenter : appel à une API comme 0x ou Uniswap
-        }
-
-        function requestLoan() {
-            const connectButton = document.getElementById('connect-metamask');
-            if (connectButton.textContent === 'MetaMask Connecté') {
-                alert('Demande de prêt initiée ! Vérifiez votre portefeuille MetaMask pour confirmer la transaction.');
-            } else {
-                alert('Veuillez connecter MetaMask avant de demander un prêt.');
-            }
-        }
-
-        document.addEventListener("DOMContentLoaded", () => {
-            fetchLivePrices();
-            setInterval(() => { fetchLivePrices(); updatePriceDisplay(); }, 60000);
-            document.getElementById('collateral-type').addEventListener('change', updateCollateralPrice);
-            updateCollateralPrice();
-            document.getElementById('connect-metamask').addEventListener('click', connectMetaMask);
-
-            gsap.from(".section", { opacity: 0, y: 50, duration: 1, stagger: 0.3, scrollTrigger: { trigger: ".section", start: "top 90%", toggleActions: "play none none reverse" } });
-            const buttons = document.querySelectorAll('.cta-button');
-            buttons.forEach(button => {
-                button.addEventListener('click', () => {
-                    gsap.to(button, { scale: 1.1, duration: 0.3, yoyo: true });
-                });
-            });
-
-            document.querySelector('.back-to-top').addEventListener('click', () => {
-                window.scrollTo({ top: 0, behavior: 'smooth' });
-            });
-
-            const modal = document.getElementById('demo-modal');
-            const openModalBtn = document.getElementById('open-demo-modal');
-            const closeModalBtn = document.getElementById('close-demo-modal');
-            const form = document.getElementById('demo-form');
-            const formMessage = document.getElementById('form-message');
-
-            openModalBtn.addEventListener('click', (e) => {
-                e.preventDefault();
-                modal.style.display = 'block';
-                gsap.fromTo(modal, { opacity: 0, scale: 0.9 }, { opacity: 1, scale: 1, duration: 0.3 });
-            });
-
-            closeModalBtn.addEventListener('click', () => {
-                gsap.to(modal, { opacity: 0, scale: 0.9, duration: 0.3, onComplete: () => {
-                    modal.style.display = 'none';
-                    formMessage.style.display = 'none';
-                    form.reset();
-                } });
-            });
-
-            window.addEventListener('click', (e) => {
-                if (e.target === modal) {
-                    gsap.to(modal, { opacity: 0, scale: 0.9, duration: 0.3, onComplete: () => {
-                        modal.style.display = 'none';
-                        formMessage.style.display = 'none';
-                        form.reset();
-                    } });
-                }
-            });
-
-            form.addEventListener('submit', async (e) => {
-                e.preventDefault();
-                const formData = new FormData(form);
-                try {
-                    const response = await fetch(form.action, {
-                        method: 'POST',
-                        body: formData,
-                        headers: { 'Accept': 'application/json' }
-                    });
-                    if (response.ok) {
-                        formMessage.style.display = 'block';
-                        formMessage.style.color = '#2c3e50';
-                        formMessage.textContent = 'Merci ! Nous vous contacterons bientôt.';
-                        form.reset();
-                    } else {
-                        formMessage.style.display = 'block';
-                        formMessage.style.color = '#e74c3c';
-                        formMessage.textContent = 'Une erreur s’est produite. Veuillez réessayer.';
-                    }
-                } catch (error) {
-                    formMessage.style.display = 'block';
-                    formMessage.style.color = '#e74c3c';
-                    formMessage.textContent = 'Une erreur s’est produite. Veuillez réessayer.';
-                }
-            });
-
-            // Gestion du formulaire d'inscription (Formspree) avec messages d'erreur détaillés
-            document.getElementById('subscribe-form').addEventListener('submit', async (e) => {
-                e.preventDefault();
-                const formData = new FormData(e.target);
-                const subscribeMessage = document.getElementById('subscribe-message');
-                try {
-                    const response = await fetch(e.target.action, {
-                        method: 'POST',
-                        body: formData,
-                        headers: { 'Accept': 'application/json' }
-                    });
-                    if (response.ok) {
-                        subscribeMessage.style.display = 'block';
-                        subscribeMessage.textContent = 'Merci ! Vous êtes inscrit.';
-                        e.target.reset();
-                    } else {
-                        const errorData = await response.json().catch(() => ({ error: `Erreur HTTP ${response.status}: ${response.statusText}` }));
-                        console.error('Erreur Formspree:', errorData);
-                        subscribeMessage.style.display = 'block';
-                        subscribeMessage.style.color = '#e74c3c';
-                        subscribeMessage.textContent = `Erreur : ${errorData.error || `Code ${response.status} - ${response.statusText}. Vérifiez votre compte Formspree.`}`;
-                    }
-                } catch (error) {
-                    console.error('Erreur réseau ou CORS:', error);
-                    subscribeMessage.style.display = 'block';
-                    subscribeMessage.style.color = '#e74c3c';
-                    subscribeMessage.textContent = `Erreur : ${error.message || 'Problème de connexion. Vérifiez la console.'}`;
-                }
-            });
-        });
-    </script>
-</body>
-</html>
